--- a/templates/order.html
+++ b/templates/order.html
@@ -1,45 +1,31 @@
-{% extends "layout.html" %}
-
-{% block title %}
-
+{% extends 'layout.html' %}
+{% block header %}
+<h1>{% block title %}{{ product.name }}{% endblock %} </h1>
 {% endblock %}
-
-{% block main %}
-<h1>Hello {{ username }}!</h1>
-
-<div class="container">
-    <p>Du hast dich für {{ number }} {{ item }} entschieden gute Wahl!</p>
-    <br>
-    <img src="" alt="Deine Wahl">
-    <p> Bitte gib Deine Kontaktdaten an </p>
-
-    <form action="/order" method="post">
-        <input type="text" name="firstname" placeholder="Vorname">
-        <input type="text" name="lastname" placeholder="Nachname">
-        <input type="text" name="email" placeholder="email">
-        <input type="text" name="street" placeholder="Strasse">
-        <input type="number" step="1" min ="1" name="hausnummer" placeholder="Hausnummer">
-        <input type="number" name="plz" placeholder="Plz">
-        <input type="text" name="city" placeholder="Stadt">
+{% block content %}
+<h1 class="h_kontakt"> Bitte gib Deine Kontaktdaten an </h1>
+<div class="input_field">
+    <form action="confirmation" method="post">
+        <input type="text" name="firstname" placeholder="Vorname" autofocus required>
+        <input type="text" name="lastname" placeholder="Nachname" required>
+        <input type="text" name="email" placeholder="email" required>
+        <input type="text" name="street" placeholder="Strasse" required>
+        <input type="number" step="1" min="1" name="hausnummer" placeholder="Hausnummer" required>
+        <input type="number" name="plz" placeholder="Plz" required>
+        <input type="text" name="city" placeholder="Stadt" required>
+<button class="btn btn-primary" type="submit">Kaufen</button>
+</form>
 </div>
-<button class="btn btn-primary" type="submit">Buy</button>
+
+<div class="product_container">
+    <img src="../static/imgs/{{ product.src }}" alt="Motiv">
+    <p>Preis: {{ product.price }} €</p>
+    <form action="delete" method="post"><button class="btn btn-primary" type="submit" name="{{ product.name }}"
+            value="{{ product.id }}">Aus dem Warenkorb entfernen</button>
+    </form>
+    <form action="/" method="get"><button class="btn btn-primary" type="submit">Zur Übersicht</button></form>
+   
 </div>
-<table>
-<th>
-    Größe
-</th>
-<th>
-    Anzahl
-</th>
-{% for item in bestellungen %}
-<tr>
-    <td>
-        {{ item.size }}
-    </td>
-    <td>
-        {{ item.number }}
-    </td>
-</tr>
-{% endfor %}
-</table>
+
+
 {% endblock %}
