--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="../static/style.css">
         
     
-        <title>{% block title %}{% endblock %}The Art Shop for Art Kids</title>
+        <title>{% block title %}{% endblock %} - Wow Wow</title>
     </head>
         <header>
             {% block header %}{% endblock %}
@@ -20,7 +20,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
-   
+    <footer>
+        <p>This is a mockup shop for learning purpose for the CS50 programm. Please do not fill in sensitive information.
+        More at <a href="https://github.com/BorisKarl/CS50_Final">GitHub</a><br>&#169; and &#8482; Boris Nielsen</p>
+    </footer>
     </body>
     
 </html>
